feat: add option questions

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "cli",
   "version": "1.0.0",
   "description": "番土脚手架",
-  "main": "index.js",
   "author": "murukal",
   "license": "ISC",
+  "type": "module",
   "bin": {
     "fantu": "./bin/index.js"
   },
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "commander": "^9.4.0",
-    "inquirer": "^9.1.1"
+    "inquirer": "^9.1.1",
+    "ora": "^6.1.2"
   },
   "devDependencies": {
     "@types/inquirer": "^9.0.1"
