--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,6 @@
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 
     /* Modules */
-    // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
@@ -95,7 +94,9 @@
     // Set the JavaScript language version for emitted JavaScript and include compatible library declarations.
     "target": "es2016",
     // Specify what module code is generated.
-    "module": "commonjs",
+    "module": "Node16",
+    // Specify how TypeScript looks up a file from a given module specifier.
+    "moduleResolution": "Node16",
     // Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility.
     "esModuleInterop": true,
     // Ensure that casing is correct in imports.
